--- a/Task1LoginRegister/Areas/Admin/Views/Report/InventoryReport.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Report/InventoryReport.cshtml
@@ -12,7 +12,7 @@
         <div class="col-12">
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <h2><i class="fas fa-warehouse  me-1"></i> Inventory Report</h2>
-                <div>
+                <div class="btn-group">
                     <a asp-action="Index" asp-controller="Report" class="btn btn-sm btn-outline-secondary"><i class="fas fa-arrow-left"></i> Back to Report</a>
                     <a asp-action="ExportInventoryReport" asp-controller="Report" asp-route-startDate="@startDate" asp-route-endDate="@endDate" class="btn btn-sm btn-outline-success"><i class="fas fa-file-export"></i> Export Report</a>
                 </div>
