--- a/Task1LoginRegister/Areas/Admin/Views/Report/ProductPerformance.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Report/ProductPerformance.cshtml
@@ -17,7 +17,7 @@
 <div class="container p-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2><i class="fas fa-box me-2"></i> Product Performance</h2>
-        <div>
+        <div class="btn-group">
             <a asp-action="Index" asp-controller="Report" class="btn btn-sm btn-outline-secondary"><i class="fas fa-arrow-left"></i> Back to Report</a>
             <a asp-action="ExportProductPerformaceReport" asp-controller="Report" asp-route-startDate="@startDate" asp-route-endDate="@endDate" class="btn btn-sm btn-outline-success"><i class="fas fa-file-export"></i> Export Report</a>
         </div>
