--- a/Task1LoginRegister/Areas/Admin/Views/Report/InventoryReport.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Report/InventoryReport.cshtml
@@ -40,17 +40,17 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-6">
-                    <div class="card border-success border-start border-4 shadow-sm">
+                    <div class="card border-danger border-start border-4 shadow-sm">
                         <div class="card-body">
                             <div class="d-flex align-items-center">
                                 <div class="flex-grow-1">
-                                    <div class="text-xs text-success text-uppercase mb-1">
+                                    <div class="text-xs text-danger text-uppercase mb-1">
                                         Low Stock Products
                                     </div>
                                     <div class="h5 mb-0 fw-bold">@Model.LowStockProductCount</div>
                                 </div>
                                 <div class="flex-shrink-0 ms-3">
-                                    <i class="fas fa-exclamation-triangle fa-2x text-success-emphasis"></i>
+                                    <i class="fas fa-exclamation-triangle fa-2x text-danger text-danger-emphasis"></i>
                                 </div>
                             </div>
                         </div>
