--- a/Task1LoginRegister/Views/Payment/ProcessPayment.cshtml
+++ b/Task1LoginRegister/Views/Payment/ProcessPayment.cshtml
@@ -46,8 +46,8 @@
             "key": "@Model.Razorpaykey",
             "amount": "@(Model.Amount * 100)",
             "currency": "@Model.Currency",
-            "name": "Vogue Veneer",
-            "image": "/images/logov.png",
+            "name": "Sky Mart",
+            "image": "/images/logo.png",
             "description": "@Model.Description",
             "order_id": "@Model.OrderId",
             "prefill": {
