--- a/Task1LoginRegister/Views/Refund/ManageRefunds.cshtml
+++ b/Task1LoginRegister/Views/Refund/ManageRefunds.cshtml
@@ -29,7 +29,7 @@
                     <tr>
                         <th>Refund Code</th>
                         <th>Order Id</th>
-                        <th>Amount</th>
+                        <th>Amount (₹)</th>
                         <th>Status</th>
                         <th>Created At</th>
                         <th>Actions</th>
