--- a/Task1LoginRegister/Areas/Admin/Views/Report/ProductPerformance.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Report/ProductPerformance.cshtml
@@ -14,7 +14,7 @@
     }
 </style>
 
-<div class="container p-4">
+<div class="container-fluid p-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2><i class="fas fa-box me-2"></i> Product Performance</h2>
         <div class="btn-group">
