--- a/Task1LoginRegister/Views/Shared/_UserLayout.cshtml
+++ b/Task1LoginRegister/Views/Shared/_UserLayout.cshtml
@@ -37,7 +37,7 @@
                             <a class="nav-link text-white" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-controller="#" asp-action="Index">About Us</a>
+                            <a class="nav-link text-white" asp-controller="Home" asp-action="About">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-controller="Home" asp-action="Products">Products</a>
