--- a/Task1LoginRegister/Areas/Admin/Views/Report/SalesReport.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Report/SalesReport.cshtml
@@ -142,6 +142,9 @@
                     <div class="h5 mb-0 font-weight-bold text-gray-800">
                         @Model.RefundRate.ToString("N2")%
                     </div>
+                    <div class="h5 mb-0 font-weight-bold text-gray-800">
+                        @Model.RefundAmount.ToString("N2")
+                    </div>
 
                 </div>
             </div>
