--- a/Task1LoginRegister/Areas/Admin/Views/Report/CustomerReport.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Report/CustomerReport.cshtml
@@ -139,7 +139,25 @@
                     datasets: [{
                         data: totalOrders,
                         backgroundColor: [
-                             '#198754', '#e74a3b', '#0d6efd','#0dcaf0', '#FFA500'
+          '#198754', // Green
+          '#e74a3b', // Red
+          '#0d6efd', // Blue
+          '#0dcaf0', // Cyan
+          '#FFA500', // Orange
+          '#6610f2', // Purple
+          '#20c997', // Teal
+          '#fd7e14', // Deep Orange
+          '#6f42c1', // Indigo
+          '#f6c23e', // Gold
+          '#1cc88a', // Light Green
+          '#36b9cc', // Sky Blue
+          '#4e73df', // Soft Blue
+          '#858796', // Gray
+          '#e83e8c', // Pink
+          '#d63384', // Dark Pink
+          '#adb5bd', // Light Gray
+          '#0b7285'  // Dark Cyan
+      
                         ]
                     }]
                 },
