#Added Product Attribute and values CRUD pages and controller

--- a/Task1LoginRegister/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -78,6 +78,16 @@
                             <span>Add New Product</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="Admin" asp-controller="ProductAttributes" asp-action="Index">
+                            <span>Product Attributes</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="Admin" asp-controller="ProductAttributeValues" asp-action="Index">
+                            <span>Product Attribute Values</span>
+                        </a>
+                    </li>
                 </ul>
             </li>
             <li class="nav-item has-dropdown">
@@ -209,7 +219,7 @@
                 </form>
             </div>
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item dropdown no-arrow mx-1">
+              @*   <li class="nav-item dropdown no-arrow mx-1">
                     <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fas fa-bell fa-fw"></i>
                         <span class="badge bg-danger rounded-pill"> 3+</span>
@@ -229,7 +239,7 @@
                         </a>
                         <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
                     </div>
-                </li>
+                </li> *@
                 <div class="topbar-divider d-none d-sm-block"></div>
 
                 <li class="nav-item dropdown no-arrow">
