#Added Hasvariant functionality in products

--- a/Task1LoginRegister/Areas/Admin/Views/Products/Create.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Products/Create.cshtml
@@ -136,7 +136,10 @@
             </div>
         </div>
 
-
+        <div class="form-group form-check mb-3">
+            <input asp-for="HasVariants" class="form-check-input" type="checkbox" id="HasVariants" />
+            <label asp-for="HasVariants" class="form-check-label fw-bold" for="HasVariants"></label>
+        </div>
 
         <div class="d-flex justify-content-center">
             <button type="submit" class="btn btn-primary px-4 py-2" style="margin-right:20px;"><i class="fas fa-save"></i> Save</button>
