--- a/Task1LoginRegister/Areas/Admin/Views/Products/Edit.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Products/Edit.cshtml
@@ -141,6 +141,11 @@
                             <input asp-for="Status" class="form-check-input" type="checkbox" id="Status" />
                             <label asp-for="Status" class="form-check-label fw-bold" for="Status">Active</label>
                         </div>
+
+                        <div class="form-group form-check mb-3">
+                            <input asp-for="HasVariants" class="form-check-input" type="checkbox" id="HasVariants" />
+                            <label asp-for="HasVariants" class="form-check-label fw-bold" for="HasVariants"></label>
+                        </div>
                     </div>
 
                 </div>
