--- a/Task1LoginRegister/Areas/Admin/Views/Products/Index.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Products/Index.cshtml
@@ -110,8 +110,8 @@
                 <th>Image</th>
                 <th>@Html.DisplayNameFor(model => model.Name)</th>
                 <th>@Html.DisplayNameFor(model => model.SKU)</th>
-                <th>@Html.DisplayNameFor(model => model.CostPrice)</th>
-                <th>@Html.DisplayNameFor(model => model.CalculatedSellingPrice)</th>
+                <th>@Html.DisplayNameFor(model => model.CostPrice) (<i class="fas fa-inr"></i>)</th>
+                <th>@Html.DisplayNameFor(model => model.CalculatedSellingPrice) (<i class="fas fa-inr"></i>)</th>
                 <th>@Html.DisplayNameFor(model => model.Category)</th>
                 <th>@Html.DisplayNameFor(model => model.Subcategory)</th>
                 <th>@Html.DisplayNameFor(model => model.StockQuantity)</th>
@@ -133,8 +133,8 @@
                    
                     <td>@Html.DisplayFor(modelItem => item.Name)</td>
                     <td>@Html.DisplayFor(modelItem => item.SKU)</td>
-                    <td class="border p-2">@item.CostPrice.ToString("C")</td>
-                    <td class="border p-2">@item.Price.ToString("C")</td>
+                    <td class="border p-2">@item.CostPrice.ToString("N2")</td>
+                    <td class="border p-2">@item.Price.ToString("N2")</td>
                     <td>@Html.DisplayFor(modelItem => item.Category.Name)</td>
                     <td>@Html.DisplayFor(modelItem => item.Subcategory.Name)</td>
                     <td>@Html.DisplayFor(modelItem=>item.StockQuantity)</td>
