--- a/Task1LoginRegister/Areas/Admin/Views/Products/Delete.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Products/Delete.cshtml
@@ -111,7 +111,7 @@
                     <tr>
                         <th>Subcategory</th>
                         <td>@Model.Subcategory.Name</td>
-                    </tr>
+                    </tr> 
 
                 </tbody>
             </table>
@@ -130,6 +130,7 @@
                         <th>Id</th>
                         <th>Image</th>
                         <th>Is Primary</th>
+                        <th>Is Variant</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
@@ -163,6 +164,7 @@
                                 </td>
 
                                 <td>@(productImage.IsPrimaryImage ? "Yes" : "No")</td>
+                                <td>@(productImage.IsVariantImage ? "Yes" : "No")</td>
                                 <td>
                                     <form method="post" asp-action="DeleteProductImage" asp-route-imageId="@productImage.Id" asp-route-productId="@Model.ProductId" onsubmit="return confirm('Are you sure you want to delete this image?');">
                                         <button type="submit" class="btn btn-danger btn-sm btn-table-action">Delete Image</button>
