--- a/Task1LoginRegister/Areas/Admin/Views/Products/Details.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Products/Details.cshtml
@@ -234,6 +234,7 @@ h2 {
                             <th>Image Id</th>
                             <th>Image</th>
                             <th>Is Primary</th>
+                            <th>Is Variant</th>
                             <th>Actions</th>
                         </tr>
                     </thead>
@@ -250,6 +251,7 @@ h2 {
                                         <img src="@productImage.ImageUrl" class="thumbnail" alt="Gallery Image">
                                     </td>
                                     <td>@(productImage.IsPrimaryImage ? "Yes" : "No")</td>
+                                    <td>@(productImage.IsVariantImage ? "Yes" : "No")</td>
                                     <td>
                                         <form method="post" asp-action="DeleteProductImage" asp-route-imageId="@productImage.Id" asp-route-productId="@Model.ProductId" style="display:inline;" onsubmit="return confirm('Are you sure you want to delete this image?');">
                                             <button type="submit" class="btn btn-danger btn-sm">Delete</button>
