#Corrected VariantId name and apply migration

--- a/Task1LoginRegister/Areas/Admin/Views/VariantAttributeValues/Create.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/VariantAttributeValues/Create.cshtml
@@ -14,8 +14,8 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="VarinatId" class="control-label"></label>
-                <select asp-for="VarinatId" class ="form-control" asp-items="ViewBag.VarinatId"></select>
+                <label asp-for="VariantId" class="control-label"></label>
+                <select asp-for="VariantId" class ="form-control" asp-items="ViewBag.VarinatId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="AttrbuteValueId" class="control-label"></label>
