--- a/Task1LoginRegister/Areas/Admin/Views/VariantAttributeValues/Edit.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/VariantAttributeValues/Edit.cshtml
@@ -15,9 +15,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="VarinatId" class="control-label"></label>
-                <select asp-for="VarinatId" class="form-control" asp-items="ViewBag.VarinatId"></select>
-                <span asp-validation-for="VarinatId" class="text-danger"></span>
+                <label asp-for="VariantId" class="control-label"></label>
+                <select asp-for="VariantId" class="form-control" asp-items="ViewBag.VarinatId"></select>
+                <span asp-validation-for="VariantId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AttrbuteValueId" class="control-label"></label>
